Correction overflow dans actualites

--- a/Public/styles/template.css
+++ b/Public/styles/template.css
@@ -201,7 +201,7 @@ main {
         background-color: white;
         padding: 0 1rem;
         font-size: 1.5rem;
-        width: 40rem;
+        width: min(40rem, 100%);
         border-style: solid;
         border-width: thin;
         border-radius: 0.5rem;
